# velocity

./: .gitignore  Cargo.toml  README.md  build.rs
.codex/: probe-run.out  probe.out  terminal_probe.rs
.codex/environments/: environment.toml
.github/workflows/: macos-release.yml  windows-release.yml
docs/: engine-benchmarks.md
src/: main.rs
tools/: engine-benchmark.mjs
wix/: velocity.wxs
