[package]
name = "velocity"
version = "0.1.0"
edition = "2021"
default-run = "velocity"

[dependencies]
eframe = { version = "0.34.1", features = ["wgpu"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shadow-terminal = "0.2.3"
tokio = { version = "1.48.0", features = ["rt", "time"] }
